fix(modalappbar.module.css): change the positioning of the modal app bar from right to left to improve alignment with the modal content

--- a/src/components/molecules/SinaUserModal/modalappbar.module.css
+++ b/src/components/molecules/SinaUserModal/modalappbar.module.css
@@ -8,7 +8,7 @@
     justify-content: stretch;
     position: fixed;
     row-gap: 4vh;
-    right: 2vw;
+    left: 2vw;
     top: 50%;
     transform: translateY(-50%);
     overflow-x: hidden; 
